--- a/captioner/DESCRIPTION
+++ b/captioner/DESCRIPTION
@@ -4,6 +4,7 @@ Title: Numbers figures and creates simple captions
 Version: 1.0
 Date: 2014-12-01
 Author: Alathea D Letaw <alathea@zoology.ubc.ca>
-Maintainer: Alathea D Letaw <alathea@zoology.ubc.ca> 
-Description: Number your figures, tables or any other objects and generate captions that are super useful for Rmd documents.
+Maintainer: Alathea D Letaw <alathea@zoology.ubc.ca>
+Description: Number your figures, tables or any other objects and generate
+    captions that are super useful for Rmd documents.
 License: MIT + file LICENSE
