added code for vignette

--- a/captioner/DESCRIPTION
+++ b/captioner/DESCRIPTION
@@ -8,3 +8,5 @@ Maintainer: Alathea D Letaw <alathea@zoology.ubc.ca>
 Description: Number your figures, tables or any other objects and generate
     captions that are super useful for Rmd documents.
 License: MIT + file LICENSE
+Suggests: knitr
+VignetteBuilder: knitr
