converted title to title case

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: captioner
 Type: Package
-Title: Numbers figures and creates simple captions
+Title: Numbers Figures and Creates Simple Captions
 Version: 2.2.3
 Date: 2015-07-15
 Author: Alathea D Letaw <alathea@zoology.ubc.ca>
