updated description per CRAN requirements

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2015-07-15
 Authors@R: person("Letaw", "Alathea", email = "alathea@zoology.ubc.ca", role = c("aut", "cre"))
 URL: https://github.com/adletaw/captioner
 BugReports: https://github.com/adletaw/captioner/issues
-Description: Captioner provides a method for automatically numbering figures,
+Description: This package provides a method for automatically numbering figures,
     tables, or other objects.  Captions can be displayed in full, or as citations.
     This is especially useful for adding figures and tables to R markdown
     documents without having to numbering them manually.
