--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: captioner
 Type: Package
 Title: Numbers Figures and Creates Simple Captions
-Version: 2.2.3
+Version: 2.2.3.9000
 Date: 2015-07-15
-Authors@R: person("Letaw", "Alathea", email = "alathea@zoology.ubc.ca", role = c("aut", "cre"))
+Authors@R: person("Alathea", "Letaw", email = "alathea@zoology.ubc.ca", role = c("aut", "cre"))
 URL: https://github.com/adletaw/captioner
 BugReports: https://github.com/adletaw/captioner/issues
-Description: Provides a method for automatically numbering figures,
-    tables, or other objects.  Captions can be displayed in full, or as citations.
+Description: Provides a method for automatically numbering figure or table
+    captions, or any other objects.  Captions are numbered and stored on
+    creation.  They can be displayed in full, or as citations.
     This is especially useful for adding figures and tables to R markdown
-    documents without having to numbering them manually.
+    documents without having to number them manually.
 License: MIT + file LICENSE
+Depends: R (>= 3.1.2)
 Suggests:
     knitr
 VignetteBuilder: knitr
