--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 # Sample .travis.yml for R projects from https://github.com/craigcitro/r-travis
 
 language: c
-
 sudo: required
-
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
+
+r_github_packages:
+  - rstudio/rmarkdown
+  - jimhester/covr
 
 env:
   global:
@@ -23,7 +25,5 @@ script: ./travis-tool.sh run_tests
 on_failure:
   - ./travis-tool.sh dump_logs
 
-notifications:
-  email:
-    on_success: change
-    on_failure: change
+after_success:
+  - Rscript -e 'covr::codecov()'
